Add flag to remove the local average of the DC.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -177,7 +177,8 @@ IP_LIB_CSOURCES = \
 filter.c \
 newdct.c \
 intra.c \
-intradata.c
+intradata.c \
+internal.c
 
 IP_LDFLAGS = `pkg-config theoradec ogg libpng --libs` -lm
 
