dummy test using Check

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -37,6 +37,7 @@ PLAYER_EXAMPLE_TARGET = player_example
 # Test targets
 ECTEST_TARGET = ectest
 TEST_COEF_CODER_TARGET = test_coef_coder
+TEST_CHECK_INITIAL_TARGET = check_initial
 # The command to use to generate dependency information
 MAKEDEPEND = gcc -MM
 #MAKEDEPEND = makedepend -f- -Y --
@@ -77,6 +78,7 @@ endif
 
 ECTEST_LIBS = -lm
 TEST_COEF_CODER_LIBS = -lm
+TEST_CHECK_INITIAL_LIBS = -lcheck
 
 # ANYTHING BELOW THIS LINE PROBABLY DOES NOT NEED EDITING
 CINCLUDE := -I../include ${CINCLUDE}
@@ -151,6 +153,7 @@ PLAYER_EXAMPLE_CSOURCES = player_example.c
 
 ECTEST_CSOURCES = tests/ectest.c
 TEST_COEF_CODER_CSOURCES = tests/test_coef_coder.c
+TEST_CHECK_INITIAL_CSOURCES = tests/check_initial.c
 
 # Create object file list.
 LIBDAALABASE_OBJS:= ${LIBDAALABASE_CSOURCES:%.c=${WORKDIR}/%.o}
@@ -167,9 +170,10 @@ ENCODER_EXAMPLE_OBJS:= ${ENCODER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
 PLAYER_EXAMPLE_OBJS:= ${PLAYER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
 ECTEST_OBJS:= ${ECTEST_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_CHECK_INITIAL_OBJS:= ${TEST_CHECK_INITIAL_CSOURCES:%.c=${WORKDIR}/%.o}
 ALL_OBJS:= ${LIBDAALABASE_OBJS} ${LIBDAALADEC_OBJS} ${LIBDAALAENC_OBJS} \
  ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS} \
- ${ECTEST_OBJS} ${TEST_COEF_CODER_OBJS}
+ ${ECTEST_OBJS} ${TEST_COEF_CODER_OBJS} ${TEST_CHECK_INITIAL_OBJS}
 # Create the dependency file list
 ALL_DEPS:= ${ALL_OBJS:%.o=%.d}
 # Prepend source path to file names.
@@ -184,9 +188,11 @@ ENCODER_EXAMPLE_CSOURCES:= ${ENCODER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 PLAYER_EXAMPLE_CSOURCES:= ${PLAYER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 ECTEST_CSOURCES:= ${ECTEST_CSOURCES:%=${TESTSRCDIR}/%}
 TEST_COEF_CODER_CSOURCES:= ${TEST_COEF_CODER_CSOURCES:%=${TESTSRCDIR}/%}
+TEST_CHECK_INITIAL_CSOURCES:= ${TEST_CHECK_INITIAL_CSOURCES:%=${TESTSRCDIR}/%}
 ALL_CSOURCES:= ${LIBDAALABASE_CSOURCES} ${LIBDAALADEC_CSOURCES} \
  ${LIBDAALAENC_CSOURCES} ${DUMP_VIDEO_CSOURCES} ${ENCODER_EXAMPLE_CSOURCES} \
- ${PLAYER_EXAMPLE_CSOURCES} ${ECTEST_CSOURCES} ${TEST_COEF_CODER_CSOURCES}
+ ${PLAYER_EXAMPLE_CSOURCES} ${ECTEST_CSOURCES} ${TEST_COEF_CODER_CSOURCES} \
+ ${TEST_CHECK_INITIAL_CSOURCES}
 # Prepand target path to file names.
 LIBDAALABASE_TARGET:= ${TARGETLIBDIR}/${LIBDAALABASE_TARGET}
 LIBDAALADEC_TARGET:= ${TARGETLIBDIR}/${LIBDAALADEC_TARGET}
@@ -197,10 +203,12 @@ PLAYER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${PLAYER_EXAMPLE_TARGET}
 # Prepend test path to file names.
 ECTEST_TARGET:= ${TESTBINDIR}/${ECTEST_TARGET}
 TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
+TEST_CHECK_INITIAL_TARGET:= ${TESTBINDIR}/${TEST_CHECK_INITIAL_TARGET}
 # Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
- ${PLAYER_EXAMPLE_TARGET} ${ECTEST_TARGET} ${TEST_COEF_CODER_TARGET}
+ ${PLAYER_EXAMPLE_TARGET} ${ECTEST_TARGET} ${TEST_COEF_CODER_TARGET} \
+ ${TEST_CHECK_INITIAL_TARGET}
 
 # Targets:
 # Everything (default)
@@ -252,6 +260,11 @@ ${TEST_COEF_CODER_TARGET}: ${TEST_COEF_CODER_OBJS}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_COEF_CODER_OBJS} ${TEST_COEF_CODER_LIBS} -o $@
 
+# check_initial
+${TEST_CHECK_INITIAL_TARGET}: ${TEST_CHECK_INITIAL_OBJS}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_CHECK_INITIAL_LIBS} -o $@
+
 # Assembly listing
 ALL_ASM := ${ALL_OBJS:%.o=%.s}
 asm: ${ALL_ASM}
@@ -260,6 +273,7 @@ asm: ${ALL_ASM}
 check: all
 	${ECTEST_TARGET}
 	${TEST_COEF_CODER_TARGET}
+	${TEST_CHECK_INITIAL_TARGET}
 
 # Remove all targets.
 clean:
