--- a/configure.ac
+++ b/configure.ac
@@ -113,6 +113,7 @@ AC_CONFIG_FILES([
   Makefile
   daala.pc
   daala-uninstalled.pc
+  doc/Makefile
   src/Makefile
   examples/Makefile
   include/Makefile
