gitignore: ignore more files

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,19 @@ package_version
 examples/dump_video
 examples/encoder_example
 examples/player_example
+tools/block_size_analysis
+tools/dump_psnrhvs
+tools/gen_cdf
+tools/gen_laplace_tables
+tools/init_intra_maps
+tools/init_intra_xform
+tools/intra_pred
+tools/intra_stats
+tools/intra_trace
+tools/out
+tools/plot_intra_maps
+tools/png2y4m
+tools/trans
+tools/trans2d
+tools/y4m2png
+
