--- a/configure.ac
+++ b/configure.ac
@@ -70,7 +70,7 @@ AS_IF([test "$enable_assertions" = "yes"], [
 
 PKG_CHECK_MODULES([OGG], [ogg >= 1.3])
 PKG_CHECK_MODULES([SDL], [sdl])
-PKG_CHECK_MODULES([PNG], [libpng12])
+PKG_CHECK_MODULES([PNG], [libpng])
 PKG_CHECK_MODULES([THEORA], [theoradec])
 
 #CC_ATTRIBUTE_VISIBILITY([default], [
