--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -2,5 +2,7 @@ noinst_PROGRAMS = logging_test
 
 AM_CFLAGS = $(OGG_CFLAGS)
 
+TESTS = logging_test
+
 logging_test_SOURCES = logging_test.c
 logging_test_LDADD = $(DAALA_ENC_LIBS) $(OGG_LIBS)
