Re-add support for OD_DUMP_IMAGES.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,10 +5,19 @@ AM_CFLAGS = $(OGG_CFLAGS)
 
 dump_video_SOURCES = dump_video.c
 dump_video_LDADD = $(DAALA_DEC_LIBS) $(OGG_LIBS)
+if DUMP_IMAGES
+  dump_video_LDADD += $(PNG_LIBS)
+endif
 
 encoder_example_SOURCES = encoder_example.c
 encoder_example_LDADD = $(DAALA_ENC_LIBS) $(OGG_LIBS)
+if DUMP_IMAGES
+  encoder_example_LDADD += $(PNG_LIBS)
+endif
 
 player_example_SOURCES = player_example.c
 player_example_LDADD = $(DAALA_ENC_LIBS) $(OGG_LIBS)
+if DUMP_IMAGES
+  player_example_LDADD += $(PNG_LIBS)
+endif
 
